Fix side_button z-index in object_3col.css.

--- a/gdmatrix-web/src/main/webapp/resources/css/object_3col.css
+++ b/gdmatrix-web/src/main/webapp/resources/css/object_3col.css
@@ -102,7 +102,7 @@ tr.current { font-weight: bold; }
 {
   display: none;
   position:fixed; 
-  z-index:1000;
+  z-index:9;
   top:50%; 
 }
 
